fix for safari conflict position:fixed with overflow:hidden in header

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -351,10 +351,6 @@
     pointer-events: none;
     overflow: visible;
 
-    @include screen("sm", max, 2) {
-      overflow: hidden;
-    }
-
     &::before {
       @include pseudo;
       @include rule(
